--- a/css/mobile_responsive.css
+++ b/css/mobile_responsive.css
@@ -113,4 +113,25 @@ h3.top-menu {
         padding-bottom: 2px;
         right: 36px;
     }
+    /* center blog post on initial load for smaller phones */
+    .blog-post-container {
+        width: 340px;
+        margin-left: 15px;
+        margin-right: 15px;
+        border-radius: 5px;
+
+    }
+
+    .blog-post  {
+        max-height: 400px;
+        height: 400px;
+        min-width: 340px;
+        width: 340px;
+    }
+
+    div.blog-reaction-container {
+        min-width: 340px;
+        width: 340px;
+    }
+
 }
